--- a/package.json
+++ b/package.json
@@ -1,24 +1,23 @@
 {
-  "dependencies": {
-    "lodash": "^4.17.21",
-    "normalize.css": "^8.0.1"
-  },
-  "name": "travel-site-udemy",
+  "name": "travel-site",
   "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
+    "dev": "webpack serve",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/rajib029/travel-site-udemy.git"
+  "dependencies": {
+    "normalize.css": "^8.0.1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/rajib029/travel-site-udemy/issues"
-  },
-  "homepage": "https://github.com/rajib029/travel-site-udemy#readme",
-  "description": ""
+  "devDependencies": {
+    "autoprefixer": "^10.2.4",
+    "css-loader": "^5.0.1",
+    "postcss-import": "^14.0.0",
+    "postcss-loader": "^5.0.0",
+    "postcss-nested": "^5.0.3",
+    "postcss-simple-vars": "^6.0.2",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.20.0",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2"
+  }
 }
